[gd_scene load_steps=3 format=2]

[ext_resource path="res://Themes/UI.tres" type="Theme" id=1]
[ext_resource path="res://UI/SettingsMenu.gd" type="Script" id=2]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 208.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ShowFPS" type="CheckBox" parent="Panel/Buttons"]
margin_right = 182.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
text = "Show FPS"

[node name="Fullscreen" type="CheckBox" parent="Panel/Buttons"]
margin_top = 32.0
margin_right = 182.0
margin_bottom = 60.0
focus_mode = 0
enabled_focus_mode = 0
text = "Fullscreen"

[node name="Vsync" type="CheckBox" parent="Panel/Buttons"]
margin_top = 64.0
margin_right = 182.0
margin_bottom = 92.0
focus_mode = 0
enabled_focus_mode = 0
text = "Vsync"

[node name="TargetFps" type="SpinBox" parent="Panel/Buttons"]
margin_top = 96.0
margin_right = 182.0
margin_bottom = 126.0
min_value = 10.0
max_value = 244.0
value = 60.0
align = 1

[node name="Label" type="Label" parent="Panel/Buttons/TargetFps"]
margin_left = 19.0
margin_top = 30.0
margin_right = 149.0
margin_bottom = 50.0
text = "Target Fps"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Buttons/ShowFPS" to="." method="_on_ShowFPS_pressed"]
[connection signal="pressed" from="Panel/Buttons/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Panel/Buttons/Vsync" to="." method="_on_CheckBox_pressed"]
[connection signal="value_changed" from="Panel/Buttons/TargetFps" to="." method="_on_TargetFps_value_changed"]
